grammar.txt
ENTRY -> STATEMENTS.

BLOCK -> lbrace STATEMENTS rbrace
       | epsolon.

STATEMENTS -> STATEMENTS STATEMENT
            | STATEMENT
            | epsolon.

STATEMENT -> EXPR_STMT
           | TAG_STMT
           | IMPORT_STMT
           | VAR_ASSIGN.

TAG_STMT -> hash lbracket id rbracket.
IMPORT_STMT -> import NAMESPACE.

VAR_ASSIGN -> pub extern let NAMESPACE colon TYPE eq EXPR
            | pub let NAMESPACE colon TYPE eq EXPR
            | extern let NAMESPACE colon TYPE eq EXPR
            | let NAMESPACE colon TYPE eq EXPR.

EXPR_STMT -> EXPR.

EXPR -> TERM
      | EXPR EXPROP TERM.

EXPROP -> plus
        | minus.

TERM -> FACTOR
      | TERM TERMOP FACTOR.

TERMOP -> percent
        | star
        | slash.

FACTOR -> ITEM
        | FACTOROP ITEM.

FACTOROP -> plus
          | minus.

ITEM -> VAR_ASSIGN
      | int
      | bool
      | NAMESPACE
      | string
      | lparen EXPR rparen
      | FUNCTION_EXPR
      | BLOCK.

FUNCTION_EXPR -> lparen FUNCTION_ARGS rparen coloncolon BLOCK
               | lparen FUNCTION_ARGS rparen coloncolon TYPE BLOCK.

FUNCTION_ARGS -> comma
               | FUNCTION_ARGS_ITEMS
               | FUNCTION_ARGS_ITEMS comma
               | TYPE comma.

FUNCTION_ARGS_ITEMS -> FUNCTION_ARGS_ITEM comma FUNCTION_ARGS_ITEM
                    | FUNCTION_ARGS_ITEMS comma FUNCTION_ARGS_ITEM.

FUNCTION_ARGS_ITEM -> NAMESPACE colon TYPE.


NAMESPACE -> NAMESPACE coloncolon id
           | id.

TYPE -> NAMESPACE
      | TUPLE_TYPE
      | exclamation.

TUPLE_TYPE -> lparen comma rparen
            | lparen TUPLE_TYPE_ITEMS rparen
            | lparen TUPLE_TYPE_ITEMS comma rparen
            | lparen TYPE comma rparen.

TUPLE_TYPE_ITEMS -> TYPE comma TYPE
                  | TUPLE_TYPE_ITEMS comma TYPE.
